Prepare for hosting at GitHub.

--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@
 ## Author: Mark Grant							##
 ##									##
 ## Purpose:								##
-## Autoconfigure script file to configure sqlitestudio project.		##
+## Autoconfigure script file to configure sqlitestudioLUXDist project.	##
 ##									##
 ##########################################################################
 
@@ -16,12 +16,13 @@
 ## Date		Author	Version	Description				##
 ##									##
 ## 07/08/2014	MG	1.0.1	Initial version.			##
+## 13/08/2014	MG	1.0.2	Changed name to use LUXDist.		##
 ##									##
 ##########################################################################
 
 
 AC_PREREQ([2.65])
-AC_INIT([sqlitestudio Distribution], m4_esyscmd([git describe --always 1>/dev/null 2>/dev/null && git describe --always | tr -d '\n' || echo 'Pre-Release' | tr -d '\n']), [m.grant.prg@gmail.com], [sqlitestudiodist])
+AC_INIT([sqlitestudio Linux / Unix Distribution], m4_esyscmd([git describe --always 1>/dev/null 2>/dev/null && git describe --always | tr -d '\n' || echo 'Pre-Release' | tr -d '\n']), [m.grant.prg@gmail.com], [sqlitestudioluxdist])
 
 AM_INIT_AUTOMAKE
 
