--- a/src/scripts/Makefile.am
+++ b/src/scripts/Makefile.am
@@ -20,7 +20,7 @@
 ##########################################################################
 
 
-applocation = $(datadir)/sqlitestudio
+applocation = $(pkglibexecdir)
 
 edit = sed \
 	-e 's|@bindir[@]|$(bindir)|g' \
