--- a/src/distobjects/Makefile.am
+++ b/src/distobjects/Makefile.am
@@ -16,6 +16,8 @@
 ## Date		Author	Version	Description				##
 ##									##
 ## 07/08/2014	MG	1.0.1	Started versioning of this script.	##
+## 23/08/2014	MG	1.0.2	Added support for architecture-		##
+##				dependent external binaries.		##
 ##									##
 ##########################################################################
 
@@ -27,6 +29,7 @@ pkgappsdir = $(pkglibexecdir)
 ../../distobjects/Share/sqlitestudio: Makefile
 	mkdir -p $(@D)
 	rm -f $(@)
+	mv $(host_cpu)/sqlitestudio*.tar.gz .
 	./extdisttar
 	cp $(distobjectssrcdir)/$(@F) $@
 	chmod a+x $@
@@ -43,5 +46,5 @@ sqlitestudio.png: $(distobjectssrcdir)/sqlitestudio.png.in
 pkgfiles_DATA = ../../distobjects/Share/sqlitestudio.png
 pkgapps_SCRIPTS = ../../distobjects/Share/sqlitestudio
 
-EXTRA_DIST = $(distobjectssrcdir)/sqlitestudio*.tar.gz $(distobjectssrcdir)/extdisttar \
-		$(distobjectssrcdir)/sqlitestudio.png.in
+EXTRA_DIST = $(distobjectssrcdir)/i386 $(distobjectssrcdir)/x86_64 \
+	$(distobjectssrcdir)/extdisttar $(distobjectssrcdir)/sqlitestudio.png.in
