Revert to use of upstream binary .bin extension.

--- a/src/distobjects/Makefile.am
+++ b/src/distobjects/Makefile.am
@@ -18,6 +18,8 @@
 ## 07/08/2014	MG	1.0.1	Started versioning of this script.	##
 ## 23/08/2014	MG	1.0.2	Added support for architecture-		##
 ##				dependent external binaries.		##
+## 25/08/2014	MG	1.0.3	Reverted to use the upstream binary	##
+##				.bin extension.				##
 ##									##
 ##########################################################################
 
@@ -26,7 +28,7 @@ distobjectssrcdir = $(srcdir)
 pkgfilesdir = $(pkgdatadir)
 pkgappsdir = $(pkglibexecdir)
 
-../../distobjects/Share/sqlitestudio: Makefile
+../../distobjects/Share/sqlitestudio.bin: Makefile
 	mkdir -p $(@D)
 	rm -f $(@)
 	mv $(host_cpu)/sqlitestudio*.tar.gz .
@@ -34,7 +36,7 @@ pkgappsdir = $(pkglibexecdir)
 	cp $(distobjectssrcdir)/$(@F) $@
 	chmod a+x $@
 
-sqlitestudio: $(distobjectssrcdir)/sqlitestudio
+sqlitestudio.bin: $(distobjectssrcdir)/sqlitestudio.bin
 
 ../../distobjects/Share/sqlitestudio.png: Makefile
 	mkdir -p $(@D)
@@ -44,7 +46,7 @@ sqlitestudio: $(distobjectssrcdir)/sqlitestudio
 sqlitestudio.png: $(distobjectssrcdir)/sqlitestudio.png.in
 
 pkgfiles_DATA = ../../distobjects/Share/sqlitestudio.png
-pkgapps_SCRIPTS = ../../distobjects/Share/sqlitestudio
+pkgapps_SCRIPTS = ../../distobjects/Share/sqlitestudio.bin
 
 EXTRA_DIST = $(distobjectssrcdir)/i386 $(distobjectssrcdir)/x86_64 \
 	$(distobjectssrcdir)/extdisttar $(distobjectssrcdir)/sqlitestudio.png.in
