--- a/src/scripts/sqlitestudio.in
+++ b/src/scripts/sqlitestudio.in
@@ -33,6 +33,8 @@
 ## Date		Author	Version	Description				##
 ##									##
 ## 07/08/2014	MG	1.0.1	Created.				##
+## 25/08/2014	MG	1.0.2	Reverted to use upstream binary .bin	##
+##				extension.				##
 ##									##
 ##########################################################################
 
@@ -112,7 +114,7 @@ do
 	esac
 done
 
-$prglocation/sqlitestudio
+$prglocation/sqlitestudio.bin
 std_cmd_err_handler $?
 
 script_exit_code=0
