--- a/configure.ac
+++ b/configure.ac
@@ -21,6 +21,8 @@
 ##				provide variables to support change to	##
 ##				an architecture-dependent install.	##
 ## 29/11/2014	MG	1.0.5	Remove redundant hashpling.		##
+## 29/11/2014	MG	1.0.6	Re-structure to cope with OS		##
+##				differences. Add check for GNU getopt.	##
 ##									##
 ##########################################################################
 
@@ -38,7 +40,27 @@ AC_CONFIG_FILES([Makefile
 
 AC_CONFIG_MACRO_DIRS([m4])
 
+AC_CANONICAL_HOST
+
 # Checks for programs.
+AC_MSG_NOTICE([checking for required $host_os specific programs])
+case $host_os in
+	*bsd*)	AC_MSG_NOTICE([using $host_os...])
+		AC_CHECK_PROG(GETOPT, getopt, yes, no, path = '/usr/local/bin')
+		if test "x$GETOPT" = "xno" ; then
+			AC_MSG_ERROR([getopt not found])
+		fi
+		;;
+	# linux*)	Allow fall through for now as the defaults are linux.
+	*)	AC_MSG_NOTICE([using defaults...])
+		AC_CHECK_PROG(GETOPT, getopt, yes, no)
+		if test "x$GETOPT" = "xno" ; then
+			AC_MSG_ERROR([getopt not found])
+		fi
+		;;
+esac
+
+AC_MSG_NOTICE([checking for required generic programs])
 
 AC_CHECK_PROG(BASH, bash, yes, no)
 if test "x$BASH" = "xno" ; then
@@ -54,8 +76,6 @@ AC_CHECK_PROG(TXT2MAN, txt2man, yes, no)
 if test "x$TXT2MAN" = "xno" ; then
    	AC_MSG_ERROR([txt2man not found])
 fi
-
-AC_CANONICAL_HOST
 
 # Checks for libraries.
 
