--- a/src/scripts/sqlitestudio.in
+++ b/src/scripts/sqlitestudio.in
@@ -14,7 +14,7 @@
 ## Purpose:								##
 ## To invoke the sqlitestudio.bin application.				##
 ##									##
-## Syntax:	sqlitestudio [ -h ] | [ -V ]				##
+## Syntax:	sqlitestudio [ -h || --help || -V || --version ]	##
 ##									##
 ## Exit Codes:	0 & 64 - 113 as per C/C++ standard			##
 ##		0 - success						##
@@ -35,6 +35,8 @@
 ## 07/08/2014	MG	1.0.1	Created.				##
 ## 25/08/2014	MG	1.0.2	Reverted to use upstream binary .bin	##
 ##				extension.				##
+## 29/11/2014	MG	1.0.3	Switched from getopts to GNU getopt to	##
+##				allow long options.			##
 ##									##
 ##########################################################################
 
@@ -43,9 +45,18 @@
 ####################
 script_exit_code=0
 osname=$(uname -s)		# Get system name for OS differentiation
-version="1.0.1"			# set version variable
+version="1.0.3"			# set version variable
 prglocation=@applocation@	# Path to application directory
 outputprefix="sqlitestudio: "
+
+# See getopt comments at the start of "Main"
+case $osname in
+*BSD)	binlocation=@bindir@"/"
+	;;
+# Linux)	Allow fall through for now as the defaults are linux.
+*)	binlocation=""
+	;;
+esac
 
 ###############
 ## Functions ##
@@ -92,27 +103,56 @@ trap trap_exit SIGHUP SIGINT SIGTERM
 ##########
 ## Main ##
 ##########
-# Process command line arguments with getopts.
-while getopts :hV arg
+# Process command line arguments with GNU getopt.
+# (FreeBSD includes, out of the box, a dodgy, feature lacking getopt program
+# installed in /usr/bin. A GNU compatable getopt package is available to install
+# and this gets installed in the bindir, ie /usr/local/bin. This means that the
+# dodgy getopt version is always found first on the PATH. In order to invoke the
+# correct program, $binlocation, (from Makefile bindir), is inserted in the command
+# line below to specify the full path). (Linux GNU getopt can be found on PATH so
+# binlocation ="").
+
+GETOPTTEMP=`"$binlocation"getopt -o hV --long help,version -n "$0" -- "$@"`
+std_cmd_err_handler $?
+
+eval set -- "$GETOPTTEMP"
+std_cmd_err_handler $?
+
+while true
 do
-	case $arg in
-	h)	echo "Usage is $0 [options]"
-		echo "	-h displays usage information"
+	case "$1" in
+	-h|--help)
+		echo "Usage is $0 [options]"
+		echo "	-h or --help displays usage information"
 		echo "	OR"
-		echo "	-V displays version information"
+		echo "	-V or --version displays version information"
+		shift
 		script_exit_code=0
 		script_exit
 		;;
-	V)	echo "$0 version "$version
+	-V|--version)
+		echo "$0 Version "$version
+		shift
 		script_exit_code=0
 		script_exit
 		;;
-	\?)	script_exit_code=64
-		output "Invalid argument -$OPTARG." 1
+	--)	shift
+		break
+		;;
+	*)	script_exit_code=1
+		output "Internal error." 1
 		script_exit
 		;;
 	esac
 done
+
+# Script does not accept other arguments.
+if [ $# -gt 0 ]
+then
+	script_exit_code=64
+	output "Invalid argument." 1
+	script_exit
+fi
 
 $prglocation/sqlitestudio.bin
 std_cmd_err_handler $?
