--- a/configure.ac
+++ b/configure.ac
@@ -25,6 +25,7 @@
 ##				differences. Add check for GNU getopt.	##
 ## 29/11/2014	MG	1.0.7	Add support for passing overall package	##
 ##				version to Makefiles.			##
+## 27/06/2015	MG	1.0.8	Remove BSD support.			##
 ##									##
 ##########################################################################
 
@@ -44,28 +45,8 @@ AC_CONFIG_FILES([Makefile
 
 AC_CONFIG_MACRO_DIRS([m4])
 
-AC_CANONICAL_HOST
-
 # Checks for programs.
-AC_MSG_NOTICE([checking for required $host_os specific programs])
-case $host_os in
-	*bsd*)	AC_MSG_NOTICE([using $host_os...])
-		AC_CHECK_PROG(GETOPT, getopt, yes, no, path = '/usr/local/bin')
-		if test "x$GETOPT" = "xno" ; then
-			AC_MSG_ERROR([getopt not found])
-		fi
-		;;
-	# linux*)	Allow fall through for now as the defaults are linux.
-	*)	AC_MSG_NOTICE([using defaults...])
-		AC_CHECK_PROG(GETOPT, getopt, yes, no)
-		if test "x$GETOPT" = "xno" ; then
-			AC_MSG_ERROR([getopt not found])
-		fi
-		;;
-esac
-
 AC_MSG_NOTICE([checking for required generic programs])
-
 AC_CHECK_PROG(BASH, bash, yes, no)
 if test "x$BASH" = "xno" ; then
    	AC_MSG_ERROR([bash not found])
@@ -79,6 +60,11 @@ fi
 AC_CHECK_PROG(TXT2MAN, txt2man, yes, no)
 if test "x$TXT2MAN" = "xno" ; then
    	AC_MSG_ERROR([txt2man not found])
+fi
+
+AC_CHECK_PROG(GETOPT, getopt, yes, no)
+if test "x$GETOPT" = "xno" ; then
+	AC_MSG_ERROR([getopt not found])
 fi
 
 # Checks for libraries.
