--- a/src/scripts/sqlitestudio.in
+++ b/src/scripts/sqlitestudio.in
@@ -38,6 +38,7 @@
 ## 29/11/2014	MG	1.0.3	Switched from getopts to GNU getopt to	##
 ##				allow long options.			##
 ## 29/11/2014	MG	1.0.4	Add overall package version to -V.	##
+## 27/06/2015	MG	1.0.5	Remove BSD support.			##
 ##									##
 ##########################################################################
 
@@ -45,20 +46,10 @@
 ## Init variables ##
 ####################
 script_exit_code=0
-osname=$(uname -s)		# Get system name for OS differentiation
-version="1.0.4"			# set version variable
+version="1.0.5"			# set version variable
 prglocation=@applocation@	# Path to application directory
 outputprefix="sqlitestudio: "
-packageversion=@pkgversion@		# Version of the complete package
-
-# See getopt comments at the start of "Main"
-case $osname in
-*BSD)	binlocation=@bindir@"/"
-	;;
-# Linux)	Allow fall through for now as the defaults are linux.
-*)	binlocation=""
-	;;
-esac
+packageversion=@pkgversion@	# Version of the complete package
 
 ###############
 ## Functions ##
@@ -106,15 +97,7 @@ trap trap_exit SIGHUP SIGINT SIGTERM
 ## Main ##
 ##########
 # Process command line arguments with GNU getopt.
-# (FreeBSD includes, out of the box, a dodgy, feature lacking getopt program
-# installed in /usr/bin. A GNU compatable getopt package is available to install
-# and this gets installed in the bindir, ie /usr/local/bin. This means that the
-# dodgy getopt version is always found first on the PATH. In order to invoke the
-# correct program, $binlocation, (from Makefile bindir), is inserted in the command
-# line below to specify the full path). (Linux GNU getopt can be found on PATH so
-# binlocation ="").
-
-GETOPTTEMP=`"$binlocation"getopt -o hV --long help,version -n "$0" -- "$@"`
+GETOPTTEMP=`getopt -o hV --long help,version -n "$0" -- "$@"`
 std_cmd_err_handler $?
 
 eval set -- "$GETOPTTEMP"
