--- a/source/desktop/Makefile.am
+++ b/source/desktop/Makefile.am
@@ -1,11 +1,12 @@
 #! /usr/bin/env bash
 ##########################################################################
 ##									##
-## Script ID: ./Makefile.am						##
+## Script ID: source/desktop/Makefile.am				##
 ## Author: Mark Grant							##
 ##									##
 ## Purpose:								##
-## AutoMake script file to generate sqlitestudio project from source.	##
+## AutoMake script file to generate sqlitestudio.desktop file from	##
+## source.								##
 ##									##
 ##########################################################################
 
@@ -22,6 +23,22 @@
 ##########################################################################
 
 
-SUBDIRS = source/desktop source/man/man1 source/distobjects
-SUBDIRS += source/progs/bash source/progs/bin
+# desktoploc is set in configure.ac to provide a conditional target depending
+# on whether distcheck is being run.
+desktopdir = $(desktoploc)
+
+sqlitestudio.desktop: Makefile
+	mkdir -p $(@D)
+	rm -f $@ $@.tmp
+	test -f ./$@.in || srcdir=$(srcdir)/; \
+	$(edit) $${srcdir}$(@F).in > $@.tmp
+	mv $@.tmp $@
+
+sqlitestudio.desktop: $(srcdir)/sqlitestudio.desktop.in
+
+desktop_DATA = sqlitestudio.desktop
+
+EXTRA_DIST = $(srcdir)/sqlitestudio.desktop.in
+
+CLEANFILES = *.tmp sqlitestudio.desktop
 
