Accommodate new upstream structure.
Change to build & install new files and directories.
Add new man page for new cli executable.
Add new invocation script for new cli executable.

Signed-off-by: Mark Grant <m.grant.prg@gmail.com>

--- a/source/man/man1/Makefile.am
+++ b/source/man/man1/Makefile.am
@@ -19,11 +19,12 @@
 ## 07/08/2014	MG	1.0.1	Started versioning of this script.	##
 ## 20/10/2015	MG	1.0.2	Restructure to conform to AutoTools	##
 ##				General Template v1.0.5.		##
+## 30/10/2016	MG	1.1.0	Add build of sqlitestudiocli man page.	##
 ##									##
 ##########################################################################
 
 
-sqlitestudio.1: Makefile
+sqlitestudio.1 sqlitestudiocli.1: Makefile
 	mkdir -p $(@D)
 	rm -f $@ $@.tmp
 	$(edit) $(srcdir)/$(@F).txt > $@.tmp
@@ -32,10 +33,11 @@ sqlitestudio.1: Makefile
 	rm -f $@.tmp
 
 sqlitestudio.1: $(srcdir)/sqlitestudio.1.txt
+sqlitestudiocli.1: $(srcdir)/sqlitestudiocli.1.txt
 
-man_MANS = sqlitestudio.1
+man_MANS = sqlitestudio.1 sqlitestudiocli.1
 
-EXTRA_DIST = $(srcdir)/sqlitestudio.1.txt
+EXTRA_DIST = $(srcdir)/sqlitestudio.1.txt $(srcdir)/sqlitestudiocli.1.txt
 
-CLEANFILES = *.tmp sqlitestudio.1
+CLEANFILES = *.tmp sqlitestudio.1 sqlitestudiocli.1
 
