--- a/source/progs/bin/Makefile.am
+++ b/source/progs/bin/Makefile.am
@@ -5,7 +5,7 @@
 ## Author: Mark Grant							##
 ##									##
 ## Purpose:								##
-## AutoMake script file to install sqlitestudio.bin.			##
+## AutoMake script file to install sqlitestudio project.		##
 ##									##
 ##########################################################################
 
@@ -18,22 +18,65 @@
 ## 20/10/2015	MG	1.0.1	Started versioning of this script at	##
 ##				level of AutoTools General Template	##
 ##				v1.0.5.					##
+## 30/10/2016	MG	1.1.0	Change to accommodate new upstream	##
+##				package format, (directories,		##
+##				executables, etc.			##
 ##									##
 ##########################################################################
 
 
-$(host_cpu)/sqlitestudio*.tar.gz: Makefile
+$(host_cpu)/sqlitestudio*.tar.*: Makefile
 
-sqlitestudio.bin: Makefile
+
+SQLiteStudio/sqlitestudio: Makefile
 	mkdir -p $(@D)
 	rm -f $@ $@.tmp
-	tar xvpf $(srcdir)/$(host_cpu)/sqlitestudio*.tar.gz
-	chmod a+x $@
-sqlitestudio.bin: $(host_cpu)/sqlitestudio*.tar.gz
+	tar xvpf $(srcdir)/$(host_cpu)/sqlitestudio*.tar.*
+SQLiteStudio/sqlitestudio: $(host_cpu)/sqlitestudio*.tar.*
 
-pkglibexec_SCRIPTS = sqlitestudio.bin
+
+SQLiteStudio/sqlitestudiocli: Makefile
+SQLiteStudio/sqlitestudiocli: $(host_cpu)/sqlitestudio*.tar.*
+
+
+## Install accompanying files
+install-data-local:
+	$(MKDIR_P) $(DESTDIR)$(pkglibexecdir)/iconengines
+	$(MKDIR_P) $(DESTDIR)$(pkglibexecdir)/imageformats
+	$(MKDIR_P) $(DESTDIR)$(pkglibexecdir)/lib
+	$(MKDIR_P) $(DESTDIR)$(pkglibexecdir)/platforms
+	$(MKDIR_P) $(DESTDIR)$(pkglibexecdir)/plugins
+	$(MKDIR_P) $(DESTDIR)$(pkglibexecdir)/printsupport
+
+	$(INSTALL_DATA) SQLiteStudio/iconengines/* \
+			$(DESTDIR)$(pkglibexecdir)/iconengines
+	$(INSTALL_DATA) SQLiteStudio/imageformats/* \
+			$(DESTDIR)$(pkglibexecdir)/imageformats
+	$(INSTALL_DATA) SQLiteStudio/lib/* \
+			$(DESTDIR)$(pkglibexecdir)/lib
+	$(INSTALL_DATA) SQLiteStudio/platforms/* \
+			$(DESTDIR)$(pkglibexecdir)/platforms
+	$(INSTALL_DATA) SQLiteStudio/plugins/* \
+			$(DESTDIR)$(pkglibexecdir)/plugins
+	$(INSTALL_DATA) SQLiteStudio/printsupport/* \
+			$(DESTDIR)$(pkglibexecdir)/printsupport
+
+
+## Uninstall accompanying files
+uninstall-local:
+	@$(NORMAL_UNINSTALL)
+	rm -rf $(DESTDIR)$(pkglibexecdir)
+
+
+clean-local:
+	rm -rf SQLiteStudio
+
+
+pkglibexec_SCRIPTS = SQLiteStudio/sqlitestudio SQLiteStudio/sqlitestudiocli
+
 
 EXTRA_DIST = $(srcdir)/i386 $(srcdir)/x86_64
 
-CLEANFILES = *.tmp sqlitestudio.bin
 
+CLEANFILES = SQLiteStudio/*.tmp SQLiteStudio/sqlitestudio \
+		SQLiteStudio/sqlitestudiocli
